<resources>
    <string name="app_name">AllaRomanaApp</string>
    <string name="registrazione">Registrazione</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">E-mail</string>
    <string name="registrati">Registrati</string>
    <string name="passaAlogin">Già sei registrato? Accedi qui</string>
    <string name="cambiaLingua">Cambia lingua</string>
    <string name="password">Password</string>
    <string name="accesso">Login</string>
    <string name="accedi">Accedi</string>
    <string name="passaAregistr">Sei nuovo? Crea un profilo</string>
    <string name="passwordDimenticata">Hai dimenticato la password?</string>
    <string name="esci">ESCI</string>
    <string name="profilo">PROFILO</string>
    <string name="debiti_crediti">DEBITI/CREDITI</string>
    <string name="creaGruppo">CREA UN GRUPPO</string>
    <string name="storico">STORICO PAGAMENTI</string>
    <string name="gruppi">GRUPPI</string>
    <string name="messaggi">MESSAGGI</string>
    <string name="impostazioni">IMPOSTAZIONI</string>
    <string name="notifiche">NOTIFICHE</string>
    <string name="bilancio">BILANCIO</string>
    <string name="password123">Inserire una password</string>
    <string name="emailRichiesta">L\'email è richiesta</string>
    <string name="passwordCorta">La password è troppo corta</string>
    <string name="utenteRegistrato">Utente registrato</string>
    <string name="errore">Errore !</string>
    <string name="inglese">Inglese</string>
    <string name="italiano">Italiano</string>
    <string name="sceltaLingua">Scegli la lingua..</string>
    <string name="emailRichiesta2">L\'email è richiesta</string>
    <string name="password321">Inserire la password</string>
    <string name="passwordCorta2">La password è troppo corta</string>
    <string name="loginEffettuato">Login effettuato</string>
    <string name="errore2">Errore !</string>
    <string name="resettaPassword">Resettare la password?</string>
    <string name="inserisciEmail">Inserisci la tua e-mail per ricevere il link di resettaggio</string>
    <string name="linkInviato">Link di resettaggio inviato</string>
    <string name="linkNonInviato">Errore! il link non è stato inviato</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="inglese2">Inglese</string>
    <string name="italiano2">Italiano</string>
    <string name="scegliLingua2">Scegli la lingua..</string>
    <string name="nuovoGruppo">Nuovo gruppo</string>
    <string name="NomeGruppo">Nome</string>
    <string name="Descrizione">Descrizione</string>
    <string name="SubmitGruppo">Crea il gruppo</string>
    <string name="NomeRichiesto">Il nome è richiesto</string>
    <string name="GruppoCreato">Il gruppo è stato creato con successo</string>
    <string name="pagaConto">Paga un conto</string>
    <string name="mappa">Mappa</string>
    <string name="marker">Segnale a Bari</string>
    <string name="normal_map">Mappa normale</string>
    <string name="hybrid_map">Mappa ibrida</string>
    <string name="satellite_map">Mappa satellitare</string>
    <string name="terrain_map">Mappa del terreno</string>
    <string name="current_position">Posizione corrente</string>
    <string name="sonoQui">Io Sono Qui</string>
    <string name="address">Ottieni indirizzo</string>
    <string name="tieniPremutoConto">Tieni premuto per pagare a un conto</string>
    <string name="aggiungiPartecipante">aggiungi un partecipante</string>
    <string name="title_activity_maps">Mappa</string>
    <string name="deleteProfile">ELIMINA PROFILO</string>
    <string name="debitListTitle">Lista debiti</string>
    <string name="paymentIfPress">Tieni premuto per pagare</string>
    <string name="debtString">Debito</string>
    <string name="goToCredit">Vai a crediti</string>
    <string name="creditListTitle">Lista crediti</string>
    <string name="goToDebts">Vai a debiti</string>
    <string name="creditString">Credito</string>
    <string name="sendIfPress">Tieni premuto per inviare una notifica</string>
    <string name="notificationSended">Notifica inviata</string>
    <string name="notificationNoSended">Non è stato possibile inviare la notifica</string>
    <string name="payTitle">Paga il conto</string>
    <string name="payTotalDebt">Salda il debito totale</string>
    <string name="payDebtBtn">Salda il debito</string>
    <string name="payTotalDebtBtn">Salda il debito totale</string>
    <string name="compensates">Compensa</string>
    <string name="debtTo">Debito con</string>
    <string name="totalDebtTo">Debito totale con</string>
    <string name="anche">Anche</string>
    <string name="conTe">ha un debito con te?</string>
    <string name="simbol">€</string>
    <string name="noDebtTo">non ha nessun debito con te</string>
    <string name="yourDebtNow">Il tuo debito ora risale a</string>
    <string name="myDebtNow">Il mio debito ora risale a</string>
    <string name="compensationFirst">Il debito con me è stato compensato grazie ai nostri debiti reciproci</string>
    <string name="compensationSecond">Adesso hai un credito con </string>
    <string name="pariA">pari a:</string>
    <string name="compensationThird">Il mio debito con te è stato compensato grazie ai nostri debiti reciproci</string>
    <string name="yourDebtNow2">Adesso hai un debito con</string>
    <string name="perfectCompensation">I nostri debiti sono stati compensati alla perfezione</string>
    <string name="totalDebtSolved">Non abbiamo più debiti reciproci</string>
    <string name="perfectCompensation2">Il debito è stato compensato alla perfezione</string>
    <string name="haveDebt">non puoi cancellare un profilo quando hai dei debiti</string>
    <string name="haveCredit">non puoi cancellare un profilo quando hai dei crediti</string>
    <string name="payMeDebt">Pagami il debito di</string>
    <string name="valute">euro</string>
    <string name="valuteS">euro</string>
    <string name="sendNotTitle">Invio notifica</string>
    <string name="sendNotBody">Sei sicuro di voler inviare una notifica a </string>
    <string name="yes">si</string>
    <string name="insertCardNum">Inserisci il numero di carta</string>
    <string name="insertPassword">Inserisci la password</string>
    <string name="debtSolved">Il debito è stato saldato</string>
    <string name="yourDebtSolved">Ti ho pagato un debito pari a</string>
    <string name="cardNumber">Numero di carta</string>
    <string name="confirm">CONFERMA</string>
    <string name="youLocked">Sei stato bloccato!</string>
    <string name="search">Cerca utenti..</string>
    <string name="addToAccount">Tieni premuto per aggiungermi al conto</string>
    <string name="notAdd">Non puoi aggiungere un utente che già partecipa al conto</string>
    <string name="added">aggiunto</string>
    <string name="prosegui">PROSEGUI</string>
    <string name="selectPaymentTitle">Seleziona un pagante</string>
    <string name="partecipantListTitle">Lista partecipanti</string>
    <string name="editImport">Importo</string>
    <string name="payBtn">PAGA</string>
    <string name="payerSelected">sarà il pagante</string>
    <string name="selectIfPress">Tieni premuto per selezionare</string>
    <string name="importominoreouguale">Importo deve essere maggiore o uguale al numero di partecipanti</string>
    <string name="selectPayer">"Seleziona un pagante"</string>
    <string name="amountPaied">Importo pagato</string>
    <string name="rememberDebt">Ti ricordo che hai un debito con me pari a </string>
    <string name="rimborsamiPresto">Rimborsami al più presto. Grazie</string>
    <string name="integerRequested">Inserisci un intero</string>
    <string name="amountRequested">Importo richiesto</string>
    <string name="historyTitle">Pagamenti</string>
    <string name="deleteAll">ELIMINA TUTTI</string>
    <string name="notificationTitle">Notifiche</string>
    <string name="deleteReaded">ELIMINA LETTE</string>
    <string name="openIfTouch">Tocca per aprire</string>
    <string name="IhaveRepYou">Ti ho segnalato per un debito</string>
    <string name="deleteDebt">Vuoi annullare questo debito?</string>
    <string name="deleteDebtYes">Annulla il debito</string>
    <string name="thisIsMyPosi">Questa è la mia posizione</string>
    <string name="IpaidYou">Ti ho pagato</string>
    <string name="youNoLocked">Sei stato sbloccato</string>
    <string name="areYouSure">Sei sicuro di voler annullare il debito di</string>
    <string name="report">Segnalazione</string>
    <string name="areYouSure2">Sei sicuro di voler segnalare</string>
    <string name="debtDoesntExi">Questo debito non esiste più</string>
    <string name="iHaveRepYou">Ti ho segnalato per un debito di</string>
    <string name="IdontKnow">Non so nulla di questo debito</string>
    <string name="reportSent">Segnalazione inviata</string>
    <string name="iHaveDelDeb">Ti ho annulato il debito di</string>
    <string name="debtDeleted">Il debito è stato cancellato</string>
    <string name="brightness">Luminosità:</string>
    <string name="sendAddress">INVIA INDIRIZZO</string>
    <string name="posSent">Posizione inviata</string>
    <string name="doYouWantSePo">Vuoi inviare la posizione a</string>
    <string name="posSendTitle">Invio Posizione</string>
    <string name="groupList">Lista gruppi</string>
    <string name="emptyList">La lista è vuota! Crea un gruppo</string>
    <string name="enterIfPress">Premi per entrare</string>
    <string name="deleteGroup">Cancella il gruppo</string>
    <string name="areYouSureGr">Sei sicuro di voler cancellare questo gruppo? Se non sei il creatore del gruppo verrai semplicemente rimosso</string>
    <string name="groupDeleted">Il gruppo è stato eliminato</string>
    <string name="noCreator">Non sei il creatore di questo gruppo</string>
    <string name="partExists">Non puoi aggiungere un utente che già partecipa al gruppo</string>
    <string name="addPartTitle">Aggiungi partecipanti</string>
    <string name="modPart">Modifica i partecipanti</string>
    <string name="groupComplete">Gruppo completo</string>
    <string name="youCannotDelete">Non puoi eliminarti</string>
    <string name="userDeleted">Utente eliminato</string>
    <string name="groupCompleted">Il gruppo è stato completato</string>
    <string name="deletePayment">Elimina pagamento</string>
    <string name="areYouSureDel">Sei sicuro di voler eliminare questo pagamento?</string>
    <string name="debtors">UTENTI DEBITORI</string>
    <string name="reports">UTENTI SEGNALATI</string>
    <string name="blockeds">UTENTI BLOCCATI</string>
    <string name="admin">Amministratore</string>
    <string name="userBlocked">Questo utente è stato già bloccato</string>
    <string name="blocked">Bloccato</string>
    <string name="stuckIfHold">Tieni premuto per bloccare questo utente</string>
    <string name="youAreStuck">Sei stato bloccato a causa dei troppi debiti</string>
    <string name="youWillSb">Verrai sbloccato quando i tuoi debiti diminuiranno</string>
    <string name="youAreStuckS">Sei stato bloccato a causa delle troppe segnalazioni</string>
    <string name="youWillSbD">Verrai sbloccato tra qualche giorno</string>
    <string name="userUnlocked">Questo utente è stato sbloccato</string>
    <string name="unlockedIfHold">Tieni premuto per sbloccare</string>
    <string name="youAreUnlocked">Sei stato sbloccato</string>
    <string name="bye">Arrivederci</string>
    <string name="cardType">Che tipo di carta hai?</string>
    <string name="insertCardT">Inserire il tipo di carta</string>
    <string name="youAreDown">Sei al verde! Ricarica per pagare</string>
    <string name="dontRemove">Non puoi rimuoverti! Siete solo due partecipanti.</string>
    <string name="partecipantDelete">Ti sei rimosso da questo gruppo</string>
    <string name="DoubleRequested">Inserire un numero</string>
    <string name="importRequired">Un intero è richiesto</string>
</resources>